force-app/main/default/objects/Test_Question_Option__c/Test_Question_Option__c.object-meta.xml
<CustomObject>
    <label>Test Question Option</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Test Question Options Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>