force-app/main/default/objects/Test_Question_Option__c/fields/Correct_Option__c.field-meta.xml
<CustomField>
    <fullName>Correct_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correct Option</label>
    <type>Checkbox</type>
</CustomField>