force-app/main/default/objects/Test_Question_Option__c/fields/Option_Description__c.field-meta.xml
<CustomField>
    <fullName>Option_Description__c</fullName>
    <label>Option Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>