force-app/main/default/objects/Test_Question_Option__c/fields/Test_Questions__c.field-meta.xml
<CustomField>
    <fullName>Test_Questions__c</fullName>
    <label>Test Questions</label>
    <referenceTo>Test_Questions__c</referenceTo>
    <relationshipLabel>Test Question Options</relationshipLabel>
    <relationshipName>Test_Question_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>